crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__entry_type_reserved.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let x: while = 1"
---
alder::syntax

  × `while` is reserved and cannot be used as a type
   ╭─[/project/src/main.ald:1:8]
 1 │ let x: while = 1
   · ┬      ──┬──
   · │        ╰── this is a reserved word
   · ╰── this binding starts here
   ╰────
