crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__enum_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "enum Color { Red Green }"
---
alder::syntax

  × I was expecting another enum variant or the end of the enum
   ╭─[/project/src/main.ald:1:18]
 1 │ enum Color { Red Green }
   · ┬                ┬
   · │                ╰── expected `,` or `}`
   · ╰── this enum declaration starts here
   ╰────
