crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__enum_payload_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "enum Shape { Circle(Number Number) }"
---
alder::syntax

  × I was expecting `,` or `)` after this variant payload type
   ╭─[/project/src/main.ald:1:28]
 1 │ enum Shape { Circle(Number Number) }
   ·                    ┬       ┬
   ·                    │       ╰── expected `,` or `)`
   ·                    ╰── this `(` opens here
   ╰────
