crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__enum_record_extension.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "enum Shape { Rect { r | width: Number } }"
---
alder::syntax

  × enum record payloads cannot extend another record
   ╭─[/project/src/main.ald:1:21]
 1 │ enum Shape { Rect { r | width: Number } }
   · ┬                   ┬
   · │                   ╰── remove this record extension
   · ╰── this enum declaration starts here
   ╰────
