crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__error_group_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "error E { :a :b }"
---
alder::syntax

  × I was expecting `,` or `}` after this error tag
   ╭─[/project/src/main.ald:1:14]
 1 │ error E { :a :b }
   ·         ┬    ┬
   ·         │    ╰── expected `,` or `}`
   ·         ╰── this `{` opens here
   ╰────
